# scorer

./: .env.sample  .gitignore  deploy.sh  run_backend.sh  run_frontend.sh  run_local.sh  tailwind.config.js  vercel.json
api/: auth.py  environment.yml  friends.py  main.py  matches.py  models.py  pyproject.toml  requirements.txt  run_local.py
api/utils/: logging.py
frontend/: .env.production  .eslintrc  .eslintrc.js  Procfile  build.sh  craco.config.js  package.json  pnpm-lock.yaml  static.json  vercel-build.js
frontend/public/: env-config.js  index.html  manifest.json
frontend/scripts/: generate-env-config.js
frontend/src/: App.tsx  index.tsx
frontend/src/api/: api.ts
frontend/src/components/: DebugInfo.tsx  Layout.tsx  LoadingScreen.tsx  Navbar.tsx  Navigation.tsx  PrivateRoute.tsx  Sidebar.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx  DataContext.tsx  index.ts
frontend/src/pages/: CreateMatch.tsx  Friends.tsx  Home.tsx  Leaderboard.tsx  Matches.tsx  Register.tsx  Validation.tsx  index.ts  index.tsx
frontend/src/services/: api.ts  index.ts
frontend/src/types/: global.d.ts  index.ts
